[gd_scene load_steps=3 format=3 uid="uid://dq0hvr7j1jkii"]

[ext_resource type="Script" uid="uid://d131204mbj3nt" path="res://scripts/editor/LocationEditor.gd" id="1_editor"]
[ext_resource type="Script" uid="uid://cpeh4i81rxr5m" path="res://lib/godot-draggable-camera-2d/DraggableCamera2D.gd" id="2_camera"]

[node name="LocationEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_editor")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 250

[node name="LeftPanel" type="PanelContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/LeftPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AreaIdLabel" type="Label" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Area ID:"

[node name="AreaIdLineEdit" type="LineEdit" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "World Map\\"

[node name="LoadButton" type="Button" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load / Create"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FileBrowserLabel" type="Label" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "File Browser"

[node name="FileTree" type="Tree" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="HSplitContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SelectToolBtn" type="Button" parent="HSplitContainer/RightPanel/Toolbar"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Select"

[node name="CreateNodeBtn" type="Button" parent="HSplitContainer/RightPanel/Toolbar"]
layout_mode = 2
toggle_mode = true
text = "Create Node"

[node name="CreateLinkBtn" type="Button" parent="HSplitContainer/RightPanel/Toolbar"]
layout_mode = 2
toggle_mode = true
text = "Create Link"

[node name="Spacer" type="Control" parent="HSplitContainer/RightPanel/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="HSplitContainer/RightPanel/Toolbar"]
layout_mode = 2
text = "Save"

[node name="CanvasPanel" type="PanelContainer" parent="HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Camera" type="Control" parent="HSplitContainer/RightPanel/CanvasPanel"]
clip_contents = true
layout_mode = 2
script = ExtResource("2_camera")
min_zoom = 0.5
max_zoom = 2.0

[node name="PropertiesPanel" type="PanelContainer" parent="HSplitContainer/RightPanel"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/RightPanel/PropertiesPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NodeProps" type="VBoxContainer" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps"]
layout_mode = 2
text = "Name:"

[node name="NameLineEdit" type="LineEdit" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="PosLabel" type="Label" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps"]
layout_mode = 2
text = "Position:"

[node name="PosContainer" type="HBoxContainer" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps"]
layout_mode = 2

[node name="XLabel" type="Label" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps/PosContainer"]
layout_mode = 2
text = "X:"

[node name="PosXSpinBox" type="SpinBox" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps/PosContainer"]
layout_mode = 2

[node name="YLabel" type="Label" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps/PosContainer"]
layout_mode = 2
text = "Y:"

[node name="PosYSpinBox" type="SpinBox" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps/PosContainer"]
layout_mode = 2

[node name="DiscoveredCheckBox" type="CheckBox" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/NodeProps"]
layout_mode = 2
text = "Is Discovered"

[node name="LinkProps" type="VBoxContainer" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6

[node name="LinkLabel" type="Label" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/LinkProps"]
layout_mode = 2
text = "Link Properties"

[node name="DistanceContainer" type="HBoxContainer" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/LinkProps"]
layout_mode = 2

[node name="DistanceLabel" type="Label" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/LinkProps/DistanceContainer"]
layout_mode = 2
text = "Distance (days):"

[node name="DistanceSpinBox" type="SpinBox" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer/LinkProps"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="HSplitContainer/RightPanel/PropertiesPanel/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "Delete"
